--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Add 'app' to Python path
+      run: |
+        echo "::set-env name=PYTHONPATH::${GITHUB_WORKSPACE}"
     - name: Run tests
       run: pytest --cov=app tests/
     - name: Upload coverage reports to Codecov
