--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
         pip install -r requirements.txt
     - name: Add 'app' to Python path
       run: |
-        echo "::set-env name=PYTHONPATH::${GITHUB_WORKSPACE}"
+        echo "PYTHONPATH=${GITHUB_WORKSPACE}" >> $GITHUB_ENV
     - name: Run tests
       run: pytest --cov=app tests/
     - name: Upload coverage reports to Codecov
