--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,14 +32,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Build Docker image
-      run: docker build -t flask-sentiment-api .
+    - name: Build and push Docker image
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/flask-sentiment-api:${{ github.sha }} .
+        docker push ${{ secrets.DOCKER_USERNAME }}/flask-sentiment-api:${{ github.sha }}
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    - name: Push Docker image
-      run: |
-        docker tag flask-sentiment-api ${{ secrets.DOCKER_USERNAME }}/flask-sentiment-api:${{ github.sha }}
-        docker push ${{ secrets.DOCKER_USERNAME }}/flask-sentiment-api:${{ github.sha }}
